--- a/design.css
+++ b/design.css
@@ -5,19 +5,23 @@
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
+    scroll-behavior: smooth;
+}
+::-webkit-scrollbar{
+    display: none;
 }
 :root{
     background-color: #1b1a27;
 }
-
-body {
+html{
+    height: 200vh;
+}
+html {
     position: relative;
     width: 100%;
-    height: 100vh;
-    padding-top: 40px;
   }
   
-body::before {
+html::before {
     content: "";
     position: absolute;
     top: 0;
@@ -31,6 +35,7 @@ body::before {
     background-position: 100px 100px;
     background-size: 4vmin 4vmin;
     pointer-events: none;
+    z-index: -1;
 }
 
 
@@ -39,6 +44,8 @@ body::before {
     top: 0;
     left: 0;
     width: 100%;
+    background-color: #1b1a27;
+    z-index: 2;
 }
 
 .navbar ul li{
@@ -53,7 +60,7 @@ body::before {
 
 .navbar li{
     margin: 5px;
-    transition:linear 0.2s;
+    transition:linear 0.3s;
 }
 .navbar li:not(.logo){
     padding: 5px;
@@ -80,4 +87,47 @@ body::before {
 .navbar li:hover:not(.logo){
     background-color: #f84f39;
     color: black;
+}
+
+.text{
+    width: 80vh;
+}
+
+.intro{
+    color: white;
+    font-size: 18px;
+    margin-top: 3px;
+}
+
+.myName{
+    font-size: 42px;
+    color: white;
+    font-weight: 900;
+}
+
+.main-content{
+    padding: 12px;
+    position: relative;
+    top: 30vh;
+    left: 20vh;
+    display: inline-block;
+}
+
+.image{
+    height: 50vh;
+    width: auto;
+    border-radius: 50%;
+    float: right;
+    z-index: 1;
+    padding: 10px;
+    margin: 15px;
+    position: relative;
+    top: 17vh;
+    left: -20vh;
+}
+.projects{
+    height: 100vh;
+    width: 100%;
+    position: relative;
+    top: 80vh;  
 }
